--- a/book/core-java/core-java/pom.xml
+++ b/book/core-java/core-java/pom.xml
@@ -84,6 +84,12 @@
             <version>1.28.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.lingala.zip4j</groupId>
+            <artifactId>zip4j</artifactId>
+            <version>2.11.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
