--- a/book/hikari-cp/hikari-cp/pom.xml
+++ b/book/hikari-cp/hikari-cp/pom.xml
@@ -104,13 +104,14 @@
             <version>${hikariCp}</version>
         </dependency>
 
-        <!-- MySQL -->
+        <!-- MySQL JDBC Driver -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.21</version>
         </dependency>
 
+        <!-- Oracle JDBC Driver -->
         <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
             <artifactId>ojdbc8</artifactId>
@@ -123,6 +124,12 @@
             <version>23.7.0.25.01</version>
         </dependency>-->
 
+        <!-- PostgreSQL JDBC Driver -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.1</version> <!-- Adjust the version as needed -->
+        </dependency>
 
     </dependencies>
 
