--- a/book/rest-api/rest-api/pom.xml
+++ b/book/rest-api/rest-api/pom.xml
@@ -59,7 +59,8 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-			<version>2.0.3</version>
+<!--			<version>2.0.3</version>-->
+			<version>2.8.6</version>
 		</dependency>
 
 		<!-- Rest client - WebClient -->
