--- a/book/spring-batch/csv-processor/src/main/resources/application.properties
+++ b/book/spring-batch/csv-processor/src/main/resources/application.properties
@@ -1,13 +1,14 @@
+server.port=8080
 spring.application.name=csv-processor
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/practice?useSSL=false&verifyServerCertificate=false&noAccessToProcedureBodies=true
-spring.datasource.username=user1
+spring.datasource.url=jdbc:mysql://localhost:3306/springbatch?useSSL=false&verifyServerCertificate=false&noAccessToProcedureBodies=true
+spring.datasource.username=springbatchuser
 spring.datasource.password=Password22092025
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=false
-spring.jpa.format-sql=false
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=false
 spring.jpa.defer-datasource-initialization=true
 
 # starts the job automatically on application startup
